# dev_reload_utilites

./: .gitignore  LICENSE  LICENSE.ru  MANIFEST.in  README.md  __init__.py  auto_reload_manager.py  find_recent_py_files.py  install_with_check.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml
dev_reload_utilites/: __init__.py  auto_reload_manager.py
docs/: index.md  myst.yml
tests/: conftest.py  test_auto_reload_manager.py
